--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -24,6 +24,12 @@ server {
 
   location / {
         proxy_pass http://app;
+        proxy_set_header X-Real-IP $remote_addr;
+        index index.html index.htm;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
   }
 
   client_max_body_size 100m;
